stop stretch

--- a/cover.css
+++ b/cover.css
@@ -117,6 +117,7 @@ a:hover {
 .music_photo {
   margin-top: 30px;
   margin-bottom: 30px;
+  align-self: center;
 }
 
 .rotateimg5 {
